[tool.poetry]
name = "pitchfork-reviews"
version = "0.1.0"
description = ""
authors = ["Silas Genário <silasge.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "pitchfork_reviews"}]

[tool.poetry.dependencies]
python = "^3.11"
polars = "^0.18.8"
jupyterlab = "^4.0.3"
seaborn = "^0.12.2"
pandas = "^2.0.3"
cmdstanpy = "^1.1.0"
dvc = "^3.6.0"
dvc-gdrive = "^2.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
